k8s/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oil-demo
  labels:
    app.kubernetes.io/part-of: oil-essence-netobserv-demo
---
apiVersion: v1
kind: Namespace
metadata:
  name: oil-peer
  labels:
    app.kubernetes.io/part-of: oil-essence-netobserv-demo
---
apiVersion: v1
kind: Namespace
metadata:
  name: oil-blocked
  labels:
    app.kubernetes.io/part-of: oil-essence-netobserv-demo
